--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			</li>
 			<li>
 				
-				<input class="pull_right3 submit" type="submit" id="submit" value="Submit" />
+				<input class="submit" type="submit" id="submit" value="Submit" />
 			</li>  
         </ul>
        
